src/test/deca/context/valid/method-subtype.deca
class A{
	Object call() {}
}

class B extends A {
	A call() {}
}
