src/test/deca/context/invalid/declClass-doubleDeclaration.deca
class A {
}

class B {
}

class A extends B {
}